syntax = "proto3";

package storage;

message Replica {
    int64 seq = 1;
    bytes data = 2; // refer MetricList data
}

message WriteRequest {
    repeated Replica replicas = 3;
}

message WriteResponse {
    oneof seq {
        int64 resetSeq = 1;
        int64 ackSeq = 2;
    }
}

message QueryRequest {
    string msg = 1;
}

message QueryResponse {
    string msg = 1;
}

service WriteService {
    rpc Write (stream WriteRequest) returns (stream WriteResponse) {
    }
}

service QueryService {
    rpc Query (stream QueryRequest) returns (stream QueryResponse) {

    }
}
